# FoodRecognition-FinalProject

./: .gitignore  Activity Diagram CV Project.drawio  CMakeLists.txt  Diagramma senza titolo.drawio  README.md  cestinato.txt  main copy.cpp  main.cpp  prova.txt
functions/: ImageProcessor.cpp  Leftover.cpp  compute_dish.cpp  descriptor_methods.cpp  detect_recognition.cpp  leftover.cpp  matcher_methods.cpp  metrics.cpp  segmentation.cpp  utils.cpp
headers/: BreadSegmenter.h  Dish.h  DishData.h  ImagePreprocessor.hpp  ImageProcessor.h  Leftover.h  SegmenterDishes.h  compute_dish.h  descriptor_methods.h  detect_recognition.h  leftover.h  matcher_methods.h  metrics.h  segmentation.h  utils.h
include/: descriptor_methods.h  descriptor_methods.hpp  utils.hpp
matching_functions/: descriptor_methods.cpp
utils/: utils.cpp
